HISTORY of collective.pwexpiry
==============================

0.8 (unreleased)
----------------

- Nothing changed yet.


0.7 (2015-03-25)
----------------

- Ignore Managers from password expiring
  [frapell]

- Bugfix: If a wrong password was entered that goes over the limit, do not
  add a response header. Only do it when entering correctly
  [frapell]

- When comparing dates, make sure both are timezone aware
  [frapell]

- Ignore case when checking for name and username in password.
  [enfold-josh]

- Change script to accept a path and use traversal to get plone site since it
  may not always be in the application root.
  [enfold-josh]

- Redirect to $portal_url/mail_password_form instead of just /mail_password_form
  [enfold-josh]

- Alter notification email to support days <= 0.
  [enfold-josh]


0.6 (2015-03-13)
----------------

- Use a friendlier date format for the control panel
  [frapell]


0.5 (2014-11-28)
----------------

- Add i18n and italian translation
  [giacomos]

- No need to include 'control panel' in the control panel title
  [frapell]


0.4 (2014-09-11)
----------------

- Add member properties, registry keys, events subscribers, and a PAS plugin
  to allow blocking a user if he enters too many incorrect passwords.
  [frapell]

- Patch ZODBUserManager.authenticateCredentials so it fires events when entering
  valid or invalid credentials.
  [frapell]

- Patch CMFPlone/RegistrationTool instead of CMFDefault/RegistrationTool.
  [frapell]


0.3 (2014-09-10)
----------------

- Properly package
  [frapell]


0.2 (2013-08-18)
----------------

- correct pypi classifiers

- initial code