@@ -23,7 +23,7 @@
               <li class="selected">
                 <a href=""
                    tal:attributes="href string:$portal_url/${template_id}"
-                   i18n:domain="collective.pwexpiry"
+                   i18n:domain="plone"
                    i18n:translate="label_users">Users</a>
               </li>
             </ul>
@@ -59,14 +59,13 @@
                       tal:define="findAll python:'form.button.FindAll' in request.keys();
                                   portal_users view/searchResults;
                                   batch python:Batch(portal_users, b_size, int(b_start), orphan=1);
-                                  batchformkeys python:['searchstring','_authenticator'];
-                                  many_users view/many_users">
+                                  batchformkeys python:['searchstring','_authenticator']">
                   <input type="hidden" name="form.submitted" value="1" />
 
                   <table class="listing" summary="User Listing" i18n:domain="plone">
                       <tbody>
                           <tr class="odd">
-                              <th colspan="3">
+                              <th colspan="4">
                                   <span tal:omit-tag="" i18n:translate="label_user_search">User Search</span>:
                                   <input class="quickSearch"
                                          type="text"
@@ -85,9 +84,8 @@
                                   <input type="submit"
                                          class="searchButton"
                                          name="form.button.FindAll"
-                                         value="Show all"
-                                         i18n:attributes="value label_showall;"
-                                         tal:condition="not:many_users"
+                                         value="Show all locked"
+                                         i18n:attributes="value label_showall_locked;"
                                          />
                               </th>
                           </tr>
@@ -95,8 +93,9 @@
                           <tal:block tal:condition="portal_users">
                           <tr class="odd">
                               <th i18n:domain="plone" i18n:translate="listingheader_user_name">User name</th>
-                              <th i18n:translate="">Date of setting the password</th>
-                              <th i18n:translate="">Date of last notification</th>
+                              <th i18n:translate="">Password set date</th>
+                              <th i18n:translate="">Last notification sent on</th>
+                              <th i18n:translate="">Unlock</th>
                           </tr>
                           </tal:block>
                           
@@ -115,35 +114,32 @@
                                     </a>
                                     <input type="hidden" name="users.id:records" tal:attributes="value userid" />
                                 </td>
-                                
-                                
+
                                 <td>
-                                    <input style="width:180px" type="text" name="users.password:records" tal:attributes="value python:view.formatDate(user.get('password_date'))" />
+                                    <span style="width:180px" tal:content="python:view.formatDate(user.get('password_date'))" />
                                 </td>
-                                
-                                
+
                                 <td>
-                                    <input style="width:180px" type="text" name="users.notification:records" tal:attributes="value  python:view.formatDate(user.get('last_notification_date'))" />
+                                    <span style="width:180px" tal:content="python:view.formatDate(user.get('last_notification_date'))" />
+                                </td>
+
+                                <td>
+                                    <input type="checkbox"
+                                        name="users.unlock:records"
+                                        value="1" />
                                 </td>
 
                             </tr>
                           </tal:block>
                           <tr tal:condition="not:batch">
                               <td tal:condition="view/searchString"
-                                  i18n:translate="text_nomatches"
-                                  style="text-align:center;">No matches</td>
+                                  i18n:translate="text_no_locked_users"
+                                  style="text-align:center;">No locked user found</td>
                               <tal:block tal:condition="not:view/searchString">
-                                <td tal:condition="many_users"
-                                    class="discreet"
-                                    i18n:translate="text_no_user_searchstring"
+                                <td class="discreet"
+                                    i18n:translate="text_no_locked_users_site"
                                     style="text-align:center; font-size: 100%;">
-                                    Enter a username to search for
-                                </td>
-                                <td tal:condition="not:many_users"
-                                    class="discreet"
-                                    i18n:translate="text_no_user_searchstring_largesite"
-                                    style="text-align:center; font-size: 100%;">
-                                    Enter a username to search for, or click 'Show All'
+                                    There are no locked users in this site at the moment
                                 </td>
                               </tal:block>
                           </tr>
@@ -171,12 +167,12 @@
                          tal:attributes="value showAll"/>
 
                   <input class="context"
-                     type="submit"
-                     name="form.button.Modify"
-                     value="Apply Changes"
-                     i18n:attributes="value label_apply_changes;"
-                     tal:condition="batch"
-                     />
+                      type="submit"
+                      name="form.button.Modify"
+                      value="Apply Changes"
+                      i18n:attributes="value label_apply_changes;"
+                      tal:condition="batch"
+                      />
 
                   <input tal:replace="structure context/@@authenticator/authenticator" />
 
