@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 
 from zope.component.interfaces import IObjectEvent
 from zope.interface import Attribute
@@ -53,3 +54,10 @@ class IValidPasswordEntered(IObjectEvent):
 class IInvalidPasswordEntered(IObjectEvent):
     """
     """
+
+
+class IUserUnlocked(Interface):
+    """
+    """
+
+    user = Attribute("The user that was unlocked")
