@@ -4,7 +4,8 @@ HISTORY of collective.pwexpiry
 0.8 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Improve control panel tool to allow admins to unlock accounts
+  [frapell]
 
 
 0.7 (2015-03-25)
